--- a/src/estilos-generales/_General.scss
+++ b/src/estilos-generales/_General.scss
@@ -1,4 +1,7 @@
 body{
-    background-color: #212529;
+    background-image: url('./Fondo.png');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: auto;
     color: white;
 }
