--- a/src/estilos-generales/_General.scss
+++ b/src/estilos-generales/_General.scss
@@ -1,7 +1,7 @@
-body{
-    background-image: url('./Fondo.png');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: auto;
-    color: white;
+body {
+  background-image: url("./Fondo.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  color: white;
 }
