--- a/src/paginas/pagina-inicio/_Pagina-inicio.scss
+++ b/src/paginas/pagina-inicio/_Pagina-inicio.scss
@@ -1,50 +1,52 @@
-.inicio-contenedor-general{
-   margin-top: 2rem;
-  
-    
-   .inicio-titulo-contenedor {
-        h1 {
-            font-size: 6rem;
-        }
+.inicio-contenedor-video {
+  margin-top: 2rem;
+
+  video {
+    width: 100%;
+    height: auto;
+  }
+
+  .inicio-video-texto {
+    margin: auto;
+
+    .inicio-skyder {
+      position: relative;
+      img {
+        height: 14rem;
+        width: auto;
+      }
     }
-
-    .inicio-contenedor-video{
-        video{
-            width: 100%;
-            height: auto;
-        }
-
-    }
-
+  }
 }
 
-.empresas-contenedor-general{
-    margin: 10rem;
-    margin-bottom: 3rem;
+.empresas-contenedor-general {
+  margin: 10rem;
+  margin-bottom: 3rem;
 
-    .empresas-contenedor-texto {
-        border: 2rem solid transparent;
-        display: flex;
-        justify-content: center;
-        
-        h1{
-            font-size: 1.5rem;
-        }
+  .empresas-contenedor-texto {
+    border: 2rem solid transparent;
+    display: flex;
+    justify-content: center;
+
+    h1 {
+      font-size: 1.5rem;
+    }
+  }
+
+  .empresas-contenedor-logos {
+    margin-left: 3rem;
+    margin-right: 3rem;
+
+    .empresas-lista-logos {
+      display: flex;
+      justify-content: space-evenly;
+      animation: presentacion 3s infinite linear;
     }
 
-    .empresas-contenedor-logos{
-        margin-left: 3rem;
-        margin-right: 3rem;
-
-        .empresas-lista-logos{
-            display: flex;
-            justify-content: space-evenly;
-            animation: presentacion 3s infinite linear;
-        }
-    
-        @keyframes presentacion {
-            to {transform: translate(1px, 0)}
-        }
+    @keyframes presentacion {
+      to {
+        transform: translate(1px, 0);
+      }
     }
+  }
 }
-
